fix payment + cart